Bug 165701 - Unexpected change of paragraph list level on node split
Summary: Unexpected change of paragraph list level on node split
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-12 13:22 UTC by Miklos Vajna
Modified: 2025-03-14 07:11 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (6.25 KB, application/vnd.oasis.opendocument.text-flat-xml)
2025-03-12 13:22 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2025-03-12 13:22:05 UTC
Created attachment 199762 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached document

2) Go to the end of the 3rd "level 5" paragraph

3) Press "enter"

Expected result: list level of the current paragraph is not changed, a new bullet point with the same list level is inserted after the current paragraph.

Actual result: a new paragraph is inserted, but the list level in both paragraphs change to level 4 for some reason.
Comment 1 Commit Notification 2025-03-13 15:36:25 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2d73d378751ea4ee8abe5504c8a371d071803d65

tdf#165701 sw: fix unexpected list level change on inserting new bullet

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-03-14 07:11:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/0842c8c6eda1d459b2929deff11b35ed90580cb3

tdf#165701 sw: fix unexpected list level change on inserting new bullet

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.